tests/tooling/fixtures/native/execution/negative/switch_case_if_unknown_break_conservative_reject.objc3
module SwitchCaseIfUnknownBreakConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      if (value) {
        break;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
